// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt builders > buildChartSummaryPrompt produces expected shape 1`] = `
{
  "system": "Você é um analista de dados sênior. Dada a configuração e o resultado de um gráfico Apache Superset, produza exatamente 3 bullets em português:
(1) **Padrão principal**: a tendência mais óbvia
(2) **Anomalia**: o ponto fora da curva mais relevante (se houver)
(3) **Hipótese**: causa plausível ou pergunta de follow-up
Seja conciso. Use números do dado. Nunca invente colunas ou valores.",
  "user": "Chart: Vendas por região
Viz type: echarts_timeseries_bar
Colunas: [{"name":"regiao","type":"VARCHAR"},{"name":"vendas","type":"NUMERIC"}]
Filtros aplicados: {"ano":2025}
Dados (top 2 rows):
[
  {
    "regiao": "Sul",
    "vendas": 1000
  },
  {
    "regiao": "Sudeste",
    "vendas": 2500
  }
]",
}
`;

exports[`prompt builders > buildRowExplainPrompt produces expected shape 1`] = `
{
  "system": "Você é um analista de dados sênior. Dada UMA seleção dentro de um gráfico Apache Superset e dados comparativos, explique por que essa seleção é notável (ou não), em português, em até 4 frases curtas. Compare com peers. Use números. Nunca invente colunas.",
  "user": "Chart: Vendas por região
Viz type: echarts_timeseries_bar
Colunas: [{"name":"regiao","type":"VARCHAR"},{"name":"vendas","type":"NUMERIC"}]
Seleção: {"regiao":"Sul"}
Linha(s) selecionada(s):
[
  {
    "regiao": "Sul",
    "vendas": 1000
  }
]
Peers de comparação:
[
  {
    "regiao": "Sudeste",
    "vendas": 2500
  },
  {
    "regiao": "Norte",
    "vendas": 800
  }
]",
}
`;
